NXP-24760: cleanup / format